--- a/exp4/bootstrap_carousel/index.html
+++ b/exp4/bootstrap_carousel/index.html
@@ -81,7 +81,7 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <img src="./img/slide-01.jpg" alt="">
+          <img src="https://s1.ax1x.com/2020/05/07/Ye50xJ.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>The Galaxy</h1>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="./img/slide-02.jpg" alt="">
+          <img src="https://s1.ax1x.com/2020/05/07/Ye5DM9.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Bangkok Night Market</h1>
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="./img/slide-04.jpg" alt="">
+          <img src="https://s1.ax1x.com/2020/05/07/Ye5w24.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>湛江金沙湾</h1>
@@ -152,7 +152,7 @@
 
       <div class="featurette">
         <img class="featurette-image pull-right" src="./img/photo.jpg">
-        <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
+        <h2 class="featurette-heading">摄影 <span class="muted">记录生活</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
 
@@ -160,7 +160,7 @@
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="./img/apple.jpg">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
+        <h2 class="featurette-heading">数码 <span class="muted">享受生活 </span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
 
@@ -168,7 +168,7 @@
 
       <div class="featurette">
         <img class="featurette-image pull-right" src="./img/vue.jpg">
-        <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
+        <h2 class="featurette-heading">技术 <span class="muted">改变生活</span></h2>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
 
