购物车案例完成

--- a/exp4/bootstrap_carousel/index.html
+++ b/exp4/bootstrap_carousel/index.html
@@ -128,7 +128,7 @@
         <div class="span4">
           <img class="img-circle" src="./img/photo.jpg">
           <h2>摄影</h2>
-          <p>摄影</p>
+          <p>摄影爱好者</p>
           <p><a class="btn" href="#">了解更多 &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
